# conan-recipes

./: .conanfile.py.swp  .gitignore  .gitlab-ci.yml  CMakeLists-bzip2.txt  CMakeLists-sdl2_image.txt  CMakeLists-sdl2_mixer.txt  CMakeLists-sdl2_ttf.txt  CMakeLists.diff  CMakeLists.txt  Display.h  DisplayTest.cpp  ErrorHandler.cpp  ErrorHandler.h  ErrorLogger.cpp  ErrorLogger.h  Exceptions.h  Game.cpp  Game.h  HIDDeviceManager.diff  README.md  SDL_uikitappdelegate.diff  add_executable_custom.cmake  add_sdl2_executable.cmake  add_test_executable.cmake  add_xcode_folder_reference.py  build.bat  build.sh  build_android-v7a.sh  build_android-v8a.sh  build_android.sh  build_ios.sh  build_ios_sim.sh  build_linux.sh  build_mac.sh  build_windows.bat  cmake_utils.py  conan.py  conan_user.txt  conanfile.py  config.txt  (+10 more)
.github/workflows/: main.yml
Android/: build.gradle  local.properties
Android/app/: build.gradle
Android/gradle/wrapper/: gradle-wrapper.properties
Display/: CMakeLists.txt
DisplayTest/: DisplayTest.cpp
ErrorHandler/: CMakeLists.txt  ErrorHandler.cpp
Game/: CMakeLists.txt  Game.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
cmake/: add_executable_custom.cmake  add_sdl2_executable.cmake  global_settings.cmake  install_executable.cmake
gradle/wrapper/: gradle-wrapper.properties
profiles/: androidarm.jinja  androidarm64.jinja  ios  linux  macos  windows  windows_x64  windows_x86
recipes/android_sdl/: conanfile.py
recipes/box2d/: CMakeLists.txt  conanfile.py
recipes/box2d/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/bzip2/: CMakeLists-bzip2.txt  CMakeLists.txt  conan.py  conanfile.py
recipes/bzip2/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/cmake_utils/: WorkspaceSettings.xcsettings  add_sdl2_executable.cmake  add_sdl_executable.cmake  conan.py  conanfile.py  global_settings.cmake  global_settings_common.cmake  global_settings_thirdparty.cmake  install_executable.cmake  install_ios.cmake  package_android_apk.cmake  target_assets.cmake
recipes/freetype/: CMakeLists.txt  conanfile.py
recipes/freetype/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/glew/: CMakeLists.diff  CMakeLists.txt  conanfile.py
recipes/glew/profiles/: androidarm64.jinja
recipes/glew/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/gtest/: CMakeLists.txt  conanfile.py
recipes/gtest/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/libpng/: CMakeLists.txt  conanfile.py
recipes/libpng/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/ogg/: CMakeLists.txt  conanfile.py
recipes/ogg/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/sdl/: CMakeLists.txt  conan.py  conanfile.py
recipes/sdl/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/sdl_image/: CMakeLists-sdl_image.txt  CMakeLists.txt  conanfile.py
recipes/sdl_image/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/sdl_mixer/: CMakeLists-sdl2_mixer.txt  CMakeLists-sdl_mixer.txt  CMakeLists.txt  conanfile.py
recipes/sdl_mixer/test_package/: CMakeLists.txt  conanfile.py  main.cpp
recipes/sdl_ttf/: CMakeLists-sdl2_ttf.txt  CMakeLists-sdl_ttf.txt  CMakeLists.txt  conanfile.py
recipes/sdl_ttf/profiles/: linux
recipes/sfml/: AudioDevice.diff  CMakeLists.diff  CMakeLists.txt  conanfile.py
recipes/sfml/test_package/: main.cpp  (+2 more)
recipes/ssrobins_engine/: CMakeLists.txt  conan.py  conanfile.py
recipes/vorbis/: CMakeLists.txt  conanfile.py
recipes/zlib/: CMakeLists.txt  conanfile.py
scripts/: conan_common.py  conan_create.py  conan_create_all.py  conan_create_changed.py  conan_create_changed_test.py
(+28 files in other folders)
